Drop in-memory records list, stream through the partial JSONL; slim progress.log
Per-run results now live in exactly one place on disk during the run:
target/test262/results.jsonl.partial. Each record is appended and
flushed as it is produced. At end-of-run the lines are read back,
sorted (lex sort == path sort because `path` is always the leading
JSON field), merged with any kept-over entries from a prior --resume
baseline, and atomic-written to the canonical target/test262/
results.jsonl.

Motivation: the previous design kept every ResultRecord in memory
during the run (List<ResultRecord> scaled 1:1 with suite size) AND
mirrored them to the partial file. For a full ~50k-test run that was
~10MB of redundant in-memory state. The file is enough — reading it
back at end-of-run to do the sort is cheap (~200 ms for 50k lines)
and keeps the sort step a stream-level operation instead of an
object-graph one.

Also simplify the session log:
- Single file target/test262/progress.log, overwritten per run (no
  more per-session timestamped files cluttering target/test262/).
- Progress / banner / summary / aborted lines go through the logger
  as before; per-FAIL lines now go to stdout ONLY. The full FAIL
  detail (path, error_type, message) already lives in the JSONL, and
  duplicating it into the log just bloated the file without giving
  a signal you couldn't get elsewhere. progress.log is now the pace
  / timeline view; results.jsonl is the data view.

Other cleanups:
- ResultWriter.write(Path, List<ResultRecord>) became
  ResultWriter.sortAndWrite(Path, List<String>) — it's a sort-lines
  + atomic-rename utility now, no longer tied to the ResultRecord
  object graph.
- Runner's loadExistingRecords / containsPath helpers are gone — the
  --resume merge operates on raw JSONL lines via a tiny extractPath
  helper (leading `"path":"…"` substring scan).
- appendPartial no longer swallows IOException. The partial file is
  the only store of mid-run state; a write failure must ab