@@ -5,31 +5,34 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.List;
 
 /**
- * Atomic JSONL writer: sorts records alphabetically by path and writes with
- * a .tmp + rename so a crash mid-write can't corrupt the committed file.
+ * Atomic JSONL writer: sorts a list of raw JSONL lines and writes them with a
+ * {@code .tmp} + rename so a crash mid-write can't corrupt the committed file.
+ * <p>
+ * Each line is expected to begin with {@code {"path":"…"} — the runner writes
+ * them in that canonical shape ({@link ResultRecord#toJsonLine()}) so
+ * lexicographic line sort is equivalent to sorting records by path.
  */
 public final class ResultWriter {
 
     private ResultWriter() {}
 
-    public static void write(Path file, List<ResultRecord> records) throws IOException {
-        List<ResultRecord> sorted = new java.util.ArrayList<>(records);
-        Collections.sort(sorted, Comparator.comparing(ResultRecord::path));
-
-        StringBuilder sb = new StringBuilder(sorted.size() * 64);
-        for (ResultRecord r : sorted) {
-            sb.append(r.toJsonLine()).append('\n');
-        }
+    public static void sortAndWrite(Path file, List<String> jsonlLines) throws IOException {
+        List<String> sorted = new ArrayList<>(jsonlLines);
+        Collections.sort(sorted);
 
         Path tmp = file.resolveSibling(file.getFileName() + ".tmp");
         Path parent = tmp.getParent();
         if (parent != null) Files.createDirectories(parent);
-        Files.writeString(tmp, sb.toString(), StandardCharsets.UTF_8);
+        Files.write(tmp, sorted, StandardCharsets.UTF_8,
+                StandardOpenOption.CREATE,
+                StandardOpenOption.TRUNCATE_EXISTING,
+                StandardOpenOption.WRITE);
         Files.move(tmp, file, StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.ATOMIC_MOVE);
     }
 }
